Added test UI button to test webview code when no services are available.  Added fly:// url support.  Added client handlers to trap/handle fly:// URL requests.

--- a/app/src/main/res/layout/activity_discover.xml
+++ b/app/src/main/res/layout/activity_discover.xml
@@ -34,6 +34,12 @@
 
     </LinearLayout>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Test"
+        android:onClick="onTestButtonClick" />
+
     <ListView
         android:id="@+id/discover_list"
         android:layout_width="match_parent"
