--- a/app/src/main/res/drawable/discover_item_gradient.xml
+++ b/app/src/main/res/drawable/discover_item_gradient.xml
@@ -4,7 +4,7 @@
         <shape>
             <gradient
                 android:angle="90"
-                android:startColor="#C88"
+                android:startColor="#B55"
                 android:endColor="#C66"
                 android:type="linear" />
         </shape>
