--- a/app/src/main/res/drawable/discover_item_gradient.xml
+++ b/app/src/main/res/drawable/discover_item_gradient.xml
@@ -4,8 +4,8 @@
         <shape>
             <gradient
                 android:angle="90"
-                android:startColor="#B55"
-                android:endColor="#C66"
+                android:startColor="#ddd"
+                android:endColor="#fff"
                 android:type="linear" />
         </shape>
     </item>
