--- a/app/src/main/res/layout/discover_list_item.xml
+++ b/app/src/main/res/layout/discover_list_item.xml
@@ -10,47 +10,30 @@
     |___________|___________________________________________|
 
 -->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-<LinearLayout
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/discover_list_item"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10sp"
     android:background="@drawable/discover_item_gradient"
     android:onClick="onItemSelected">
 
     <ImageView
         android:id="@+id/discover_list_item_icon"
-        android:layout_width="wrap_content"
+        android:layout_width="50sp"
         android:layout_height="50sp"
-        android:layout_marginLeft="5sp"
-        android:layout_marginTop="5sp"
+        android:layout_marginLeft="10sp"
+        android:padding="5sp"
+        android:scaleType="fitCenter"
         android:src="@drawable/logo_flyweb_white" />
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/discover_list_item_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_weight="1"
-        android:layout_marginLeft="5sp">
-
-        <TextView
-            android:id="@+id/discover_list_item_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="30sp"
-            android:textStyle="bold"
-            android:layout_marginTop="5sp"/>
-
-        <TextView
-            android:id="@+id/discover_list_item_description"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
+        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="5sp"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
 </LinearLayout>
-</RelativeLayout>
