Moved webview activity title to top of view.  Added blank icon for services without icons.

--- a/app/src/main/res/layout/discover_list_item.xml
+++ b/app/src/main/res/layout/discover_list_item.xml
@@ -25,7 +25,7 @@
         android:layout_marginLeft="10sp"
         android:padding="5sp"
         android:scaleType="fitCenter"
-        android:src="@drawable/logo_flyweb_white" />
+        android:src="@drawable/blank_64x64" />
 
     <TextView
         android:id="@+id/discover_list_item_name"
