--- a/app/src/main/res/layout/activity_discover.xml
+++ b/app/src/main/res/layout/activity_discover.xml
@@ -44,7 +44,7 @@
     </ListView>
 
     <Button
-            android:text="Share Files"
+            android:text="Share Photos"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/share_files"
