--- a/app/src/main/res/layout/activity_share.xml
+++ b/app/src/main/res/layout/activity_share.xml
@@ -22,12 +22,12 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.design.widget.FloatingActionButton
-            android:id="@+id/upload"
+    <TextView
+            android:text="An error has occurred. Please try again."
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="@dimen/fab_margin"
-            app:srcCompat="@android:drawable/ic_menu_add"/>
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="128dp"
+            android:id="@+id/textView"/>
 
 </android.support.design.widget.CoordinatorLayout>
